--- a/testadmin/resources/templates/thymeleaf/index.html
+++ b/testadmin/resources/templates/thymeleaf/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html >
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<title>Title</title>
-</head>
-<body>
-<span th:text="${user.name}"></span>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Title</title>
+        <script src="https://cdn.tailwindcss.com"></script>
+    </head>
+    <body>
+        <div class="container mx-auto px-4 mt-4">
+            <div class="bg-white shadow p-4 rounded-lg">
+                <div th:text="${user.name}"></div>
+                <div th:text="${user.name}"></div>
+                <div th:text="${user.name}"></div>
+                <div th:text="${user.name}"></div>
+                <div th:text="${user.name}"></div>
+                <div th:text="${user.name}"></div>
+                <div th:text="${user.name}"></div>
+                <div th:text="${user.name}"></div>
+            </div>
+        </div>
+    </body>
 </html>
