--- a/testadmin/resources/templates/thymeleaf/index.html
+++ b/testadmin/resources/templates/thymeleaf/index.html
@@ -7,15 +7,34 @@
     </head>
     <body>
         <div class="container mx-auto px-4 mt-4">
-            <div class="bg-white shadow p-4 rounded-lg">
-                <div th:text="${user.name}"></div>
-                <div th:text="${user.name}"></div>
-                <div th:text="${user.name}"></div>
-                <div th:text="${user.name}"></div>
-                <div th:text="${user.name}"></div>
-                <div th:text="${user.name}"></div>
-                <div th:text="${user.name}"></div>
-                <div th:text="${user.name}"></div>
+            <div class="bg-white shadow p-4 rounded-lg divide-y">
+                <div class="p-4">
+                    <h1>タグ一覧</h1>
+                    <ul>
+                        <li th:inline="text" th:each="tag : ${tags}">Programing Language: [[${tag.name}]] Count: [[${tag.count}]]</li>
+                    </ul>
+                </div>
+                <div class="p-4">
+                    <h1>コンテンツ一覧</h1>
+                    <table class="table-auto">
+                        <thead>
+                            <tr>
+                                <th class="border px-4 py-2">Title</th>
+                                <th class="border px-4 py-2">Tag</th>
+                                <th class="border px-4 py-2">Created_at</th>
+                                <th class="border px-4 py-2">Updated_at</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr th:inline="text" th:each="content: ${contents}">
+                                <td class="border px-4 py-2">[[${content.title}]]</td>
+                                <td class="border px-4 py-2">[[${content.tag}]]</td>
+                                <td class="border px-4 py-2">[[${content.createdAt}]]</td>
+                                <td class="border px-4 py-2">[[${content.updatedAt}]]</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </body>
